renamed current main.scss/.css to main.old.scss/.css and renamed main-new.scss/.css to main.scss/.css and updated link to .css file on index.html

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,233 +1,236 @@
-*{
+* {
+  font-family: "poppins", sans-serif;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+.removed {
+  color: rgb(255, 181, 181);
+}
+
+.added {
+  color: rgb(181, 255, 181);
+}
+
+.fixed {
+  color: rgb(255, 235, 181);
+}
+
+.amended {
+  color: rgb(229, 255, 181);
+}
+
+.issues {
+  color: rgb(255, 181, 233);
+}
+
+.renamed {
+  color: rgb(209, 181, 255);
+}
+.a_link {
+  color: rgba(184, 181, 181, 0.557);
+  text-decoration: none;
+  font-size: 1em;
+}
+.a_link_dev {
+  color: rgba(184, 181, 181, 0.557);
+  text-decoration: none;
+  font-size: 1em;
+}
+.a_link_dev:hover {
+  color: #ffc9ff;
+}
+.a_link:hover {
+  color: #ffc9ff;
+}
+.h3_header {
+  color: rgba(184, 181, 181, 0.557);
+  font-size: 1.3em;
+}
+.version_date {
+  color: rgb(184, 223, 255);
+  font-size: 0.85em;
+}
+body {
+  background-color: #121212;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  flex-direction: column;
+}
+h1 {
+  color: #ffffff;
+  padding: 0;
+}
+
+h1 {
+  color: #ffffff;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: -0.3%;
+}
+p {
+  color: #ffffff;
+}
+.changelog {
+  margin-top: 20px;
+  width: 100%;
+  max-width: 600px;
+}
+
+hr {
+  color: rgb(233, 179, 234);
+}
+
+a {
+  margin-right: 10px; // Adjust the spacing as needed
+  margin-bottom: 1px;
+}
+
+img {
+  max-height: 20px; // Adjust the size as needed
+
+  margin-bottom: -3px;
+}
+.svg_git {
+  max-height: 20px; // Adjust the size as needed
+
+  margin-bottom: -3px;
+}
+.svg_sidebar {
+  max-height: 20px; // Adjust the size as needed;
+}
+
+img:hover {
+  opacity: 0.7;
+  color: #ffc9ff;
+}
+.hr_divider {
+  color: rgba(87, 68, 87, 0.598);
+}
+.version {
+  margin-bottom: 20px;
+}
+.version h2 {
+  color: #ffc9ff;
+}
+.version ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+.version ul li {
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 50px 0;
+  margin-right: 50px 0;
+}
+a {
+  color: #ffffff;
+  padding: 0;
+}
+.accordion {
+  background-color: #333;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 0.75em;
+  transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+  background-color: #575757;
+  padding: 15px;
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: #1f1f1f;
+  overflow: hidden;
+}
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center; /* Center the links */
+}
+.sidebar ul li {
+  padding: 10px;
+}
+.sidebar ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  padding: 0.5em;
+  font-size: 0.85em;
+}
+.sidebar ul li a:hover {
+  background-color: #575757;
+  padding: 0.5em;
+}
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 200px;
+  height: 100%;
+  background-color: #333;
+  padding-top: 20px;
+  overflow-y: scroll;
+  transition: transform 0.3s ease;
+  transform: translateX(0);
+}
+@media screen and (max-width: 600px) {
+  .sidebar {
+    display: none;
     margin: 0;
-    padding: 0;
-    font-family: "poppins", sans-serif;
-    letter-spacing: 1px;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-:root{
-    --hover-active-colour: #F2C7E2;
-    --svg-fill-colour: #fff;
-    --sorce-code-svg-fill-colour: hsl(214, 7%, 47%);
-    --body-bg-colour: #121212;
-    --nav-footer-bg-colour: #131418;
-    --nav-text-colour: #f2f5f7;
-    --card-bg-colour: #262626;
-    --card-title-span-colour: rgb(255, 251, 251);
-    --card-box-shadow-colour: rgba(139,138,138,0.2);
-    --card-box-shadow-hover-colour: #f2c7e2;
-    --top-border-colour: #f2c7e20a;
-    --header-border-colour: hsla(321, 75%, 81%, 0.514);
-    --footer-link-colour: rgb(110, 110, 110);
-    --blog-span-hr-colour: rgba(105, 105, 105, 0.26);
   }
-body{
-    overflow-x: hidden;
-    background-color: var(--body-bg-colour);
-    color: var(--nav-text-colour);
 }
-.changelog_h1{
-    padding-top: 1em;
-    margin: auto;
-    text-align: center;
-    font-size: 1.25em;
-    color: var(--nav-text-colour);
-    @media screen and (max-width: 1000px){
-      padding-top: 1em;
-      font-size: 1.25em;
-      padding-left: 2em;
-      padding-right: 2em;
-    }
-    
+.sidebar-icon {
+  position: absolute;
+  left: 200px;
+  font-size: 30px;
+  cursor: pointer;
+  color: #ffffff;
 }
-.changelog_p{
-    margin: auto;
-    text-align: center;
-    font-size: 1em;
-    color: var(--nav-text-colour);
-    @media screen and (max-width: 1000px){
-      font-size: 1em;
-      padding-left: 2em;
-      padding-right: 2em;
-    }
-    
+#sidebar-toggle {
+  display: none;
 }
-.header_hr{
-border-top: 1px solid var(--header-border-colour); 
-width: 95%;
-margin-left: 3em;
+#sidebar-toggle:not(:checked) + .sidebar-icon + .sidebar {
+  transform: translateX(-100%);
 }
-.div_hr{
-border: .2px solid #8a548b85;
-width: 50%;
-margin-left: 35em;
-margin-top: 1em;
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
 }
-.div_hr_2{
-border: .2px solid #3d336600;
-width: 70%;
-margin-left: 20em;
-margin-top: 2em;
+.sidebar ul li {
+  text-align: center;
 }
-.div_hr_3{
-border: .2px solid #4d33664f;
-width: 50%;
-margin-left: 35em;
-margin-top: 1em;
+.sidebar ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
 }
-.div_hr_4{
-border: .2px solid #4d33664f;
-width: 50%;
-margin-left: 35em;
-margin-top: 2.5em;
+.sidebar ul li a:hover {
+  background-color: #575757;
 }
-div{
-margin-top: -4em;
-display: block;
-@media screen and (max-width: 800px){
-  margin-left: -10%;
+body {
+  margin-left: 200px; /* Adjust this value if needed */
 }
-}
-.div_2{
-margin-top: -12.5em;
-display: block;
-@media screen and (max-width: 800px){
-  margin-left: -10%;
-}
-
-}
-.div_3{
-margin-top: -4.5em;
-display: block;
-@media screen and (max-width: 800px){
-  margin-left: -10%;
-}
-
-}
-.div_4{
-margin-top: -11.5em;
-display: block;
-@media screen and (max-width: 800px){
-  margin-left: -10%;
-}
-
-}
-.div_5{
-margin-top: -6em;
-display: block;
-@media screen and (max-width: 800px){
-  margin-left: -10%;
-margin-top: 1em;
-}
-}
-.mobile{
-@media screen and (max-width: 800px){
-display: flex;
-margin-top: .5em;
-padding-top: 5em;
-
-}
-}
-.div_6{
-margin-top: -13em;
-display: block;
-@media screen and (max-width: 800px){
-  margin-left: -10%;
-}
-
-}
-.div_7{
-margin-top: -6em;
-margin-bottom: 2.5em;
-display: block;
-@media screen and (max-width: 800px){
-  margin-left: -10%;
-}
-
-}
-h2, p{
-margin-left: 30%;
-@media screen and (max-width: 800px){
-  margin-left: 10%;
-}
-
-}
-h2{
-font-size: 1.5em;
-color: #ffc9ff; 
-margin-top: 1em;
-}
-.h2_2{
-font-size: 1.15em;
-color: var(--footer-link-colour); 
-margin-top: 1em;
-}
-p{
-font-size: .80em;
-}
- ul, li{
-margin-left: 21.5%;
-}
-h3{
-margin-left: 36.5%;
-margin-top: .75em;
-font-size: .95em;
-}
-
-
-.removed{
-color: rgb(255, 181, 181);
-}
-
-.added{
-color: rgb(181, 255, 181);
-
-}
-.fixed{
-color: rgb(255, 235, 181);
-}
-
-.amended{
-color: rgb(229, 255, 181);
-
-}
-
-.issues{
-color: rgb(255, 181, 233);
-}
-
-.renamed{
-color: rgb(209, 181, 255);
-
-}
-.issues_rc1{
-color: rgb(255, 181, 233);
-font-size: .90em;
-}
-ul{
-margin-top: .5em;
-}
-
-.header_date_a {
-margin-left: 30%;
-font-size: .85em;
-display: block;
-color: #ffffff8e;
-@media screen and (max-width: 800px){
-  margin-left: 10%;
-}
-}
-
-a{
-  color: var(--nav-text-colour);
-  &:hover{
-    color: var(--hover-active-colour);
+@media screen and (max-width: 600px) {
+  body {
+    margin-left: 1em;
+    margin-right: 1em;
   }
-    
 }
-
-.known_li{
-font-size: .80em;
+#sidebar-toggle:not(:checked) ~ body {
+  margin-left: 0;
 }
-
