--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,6 +210,7 @@ a {
   overflow-y: scroll;
   transition: transform 0.3s ease;
   transform: translateX(0);
+  list-style-type: none;
 }
 
 @media screen and (max-width: 600px) {
