--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -187,6 +187,7 @@ a {
   overflow-y: scroll;
   transition: transform 0.3s ease;
   transform: translateX(0);
+  list-style-type: none;
 }
 @media screen and (max-width: 600px) {
   .sidebar {
