--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,14 @@ h1 {
   padding-top: 0;
   padding-bottom: 0;
   margin-bottom: -0.3%;
+  font-size: 1.4em;
+}
+@media screen and (max-width: 800px) {
+  h1 {
+    text-align: center;
+    align-self: center;
+    font-size: 1.2em;
+  }
 }
 
 p {
